# git-s3-publish

./: Cargo.toml  LICENSE  README.md
src/: main.rs
