[package]
name = "git-s3-publish"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.43.0"
clap = { version = "4.5.15", features = ["derive", "env"] }
dotenvy = "0.15.7"
tempfile = "3.12.0"
tokio = { version = "1.39.2", features = ["full"] }
